--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  <a href="./repeta.htm">module-11-practice</a>
-  <a href="./async-await.html">module-11-aa</a>
+
+  <a href="./rep-1.html">module-11-aa</a>
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
 </body>
